# codel00p

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  STATUS.md  install.ps1  install.sh  package.json  pnpm-lock.yaml  readme.md
core/: .dockerignore  Cargo.toml  Dockerfile  README.md  fly.toml
core/crates/codel00p-cli/: Cargo.toml  README.md  build.rs
core/crates/codel00p-cli/src/: actor.rs  agent.rs  cloud.rs  cloud_client.rs  config.rs  config_cmd.rs  connector_permissions.rs  credentials.rs  cron.rs  dialog.rs  error_help.rs  gateway.rs  help.rs  login.rs  main.rs  mcp_server.rs  memory.rs  memory_ranker.rs  plugins.rs  providers.rs  session.rs  settings.rs  skills.rs  uninstall.rs  update.rs
core/crates/codel00p-cli/tests/: agent_cli.rs  cloud_cli.rs  config_cli.rs  cron_cli.rs  gateway_cli.rs  help_cli.rs  mcp_server_cli.rs  memory_cli.rs  plugins_cli.rs  providers_cli.rs  session_cli.rs  skills_cli.rs
core/crates/codel00p-cloud/: Cargo.toml  DEPLOY.md  README.md
core/crates/codel00p-cloud/src/: agents.rs  auth.rs  directory.rs  error.rs  lib.rs  main.rs  mcp.rs  memory.rs  projects.rs  routes.rs  state.rs
core/crates/codel00p-cloud/tests/: http.rs  http_postgres.rs
core/crates/codel00p-cron/: Cargo.toml
core/crates/codel00p-cron/src/: lib.rs
core/crates/codel00p-e2e/: Cargo.toml  README.md
core/crates/codel00p-e2e/examples/: repl.rs
core/crates/codel00p-e2e/src/: assertions.rs  lib.rs  mock.rs  runner.rs
core/crates/codel00p-e2e/tests/: cli_surfaces.rs  context.rs  default_tool_set.rs  delegation.rs  execute_code.rs  fallback.rs  mcp.rs  memory_loop.rs  multi_agent.rs  nav_robustness.rs  permissions.rs  pilot.rs  pipeline_capability.rs  planning_web.rs  providers.rs  sessions.rs  smoke.rs  tools_command.rs  tools_editing.rs  tools_git.rs  tools_readonly.rs  turn_control.rs  verify_before_done.rs
core/crates/codel00p-gateway/: Cargo.toml
core/crates/codel00p-gateway/src/: approvals.rs  auth.rs  lib.rs  slack.rs
core/crates/codel00p-harness/: Cargo.toml  README.md
core/crates/codel00p-harness/src/: agent.rs  background.rs  base_prompt.rs  cancel.rs  capability.rs  checkpoints.rs  checks.rs  code_exec.rs  coerce.rs  commands.rs  curated_memory.rs  delegation.rs  editing.rs  error_classify.rs  errors.rs  event_sink.rs  find.rs  git.rs  instructions.rs  iteration_budget.rs  learning.rs  lib.rs  lifecycle.rs  memory.rs  pipeline.rs  planning.rs  pr.rs  provider_adapter.rs  repo_map.rs  self_context.rs  session.rs  skills.rs  streaming.rs  subagent.rs  terminal.rs  tool_registry.rs  tool_result.rs  tools.rs  truncation.rs  turn.rs  (+5 more)
core/crates/codel00p-harness/tests/: agent_tool_loop.rs  agent_turn.rs  cancellation.rs  capability_turn.rs  command_tool.rs  context_manifest.rs  docker_backend.rs  editing_tools.rs  git_workflow.rs  integration_config.rs  memory_recommendation.rs  pipeline_turn.rs  prepare_pr.rs  project_instructions.rs  provider_adapter.rs  provider_harness_integration.rs  read_only_tools.rs  self_correction.rs  session_state.rs  skill_auto_extraction.rs  subagent_delegation.rs  tool_registry.rs  tool_search.rs  usage.rs  verify_loop.rs  workspace_paths.rs  worktree_isolation.rs
core/crates/codel00p-mcp/: Cargo.toml  README.md
core/crates/codel00p-mcp/src/: capabilities.rs  descriptors.rs  error.rs  http_client.rs  initialization.rs  json_rpc.rs  lib.rs  notifications.rs  parsing.rs  server.rs  stdio_client.rs  stdio_codec.rs  subscriptions.rs  tool.rs
core/crates/codel00p-mcp/tests/: client_contract.rs  http_client.rs  server_runtime.rs  stdio_codec.rs  stdio_process_client.rs
core/crates/codel00p-memory/: Cargo.toml  README.md
core/crates/codel00p-memory/src/: curator.rs  error.rs  extraction.rs  inputs.rs  lib.rs  query.rs  ranking.rs  records.rs  repository.rs  review.rs  store.rs  util.rs
core/crates/codel00p-memory/tests/: extraction.rs  lifecycle.rs  sqlite_memory.rs
core/crates/codel00p-plugin/: Cargo.toml
core/crates/codel00p-plugin/src/: lib.rs
core/crates/codel00p-plugin/tests/: harness_wiring.rs
core/crates/codel00p-protocol/: Cargo.toml
core/crates/codel00p-protocol/src/: cloud.rs  context.rs  events.rs  ids.rs  lib.rs  memory.rs  permissions.rs  persistence.rs  provider.rs  runtime.rs  session.rs  tools.rs  version.rs
core/crates/codel00p-protocol/tests/: contracts.rs  golden_json.rs
core/crates/codel00p-providers/: Cargo.toml  README.md
core/crates/codel00p-providers/src/: aws_managed_identity.rs  azure_managed_identity.rs  client.rs  credentials.rs  error_classifier.rs  gcp_managed_identity.rs  lib.rs  model_catalog.rs  policy.rs  pricing_catalog.rs  profile.rs  registry.rs  request.rs  response.rs  runtime.rs  stream.rs
core/crates/codel00p-providers/tests/: anthropic_messages_transport.rs  aws_managed_identity.rs  (+25 more)
core/crates/codel00p-skill/: Cargo.toml
core/crates/codel00p-storage/: Cargo.toml  README.md
core/crates/codel00p-textsim/: Cargo.toml
crates/codel00p-harness/: Cargo.toml  README.md
crates/codel00p-harness/src/: agent.rs  errors.rs  events.rs  iteration_budget.rs  lib.rs  permissions.rs  provider_adapter.rs  session.rs  tool_registry.rs  tool_result.rs  tools.rs  turn.rs  workspace.rs
crates/codel00p-harness/tests/: agent_tool_loop.rs  agent_turn.rs  integration_config.rs  iteration_budget.rs  live_provider_harness.rs  model_client.rs  protocol_contracts.rs  provider_adapter.rs  provider_harness_integration.rs  scaffold.rs  session_state.rs  workspace_paths.rs
crates/codel00p-providers/: Cargo.toml  README.md
crates/codel00p-providers/src/: client.rs  credentials.rs  error.rs  error_classifier.rs  lib.rs  policy.rs  profile.rs  registry.rs  request.rs  response.rs  runtime.rs
crates/codel00p-providers/tests/: chat_completions_transport.rs  client_interface.rs  integration_config.rs  live_copilot.rs  provider_policy.rs  provider_registry.rs  runtime_resolution.rs  tool_calls.rs
crates/codel00p-storage/: Cargo.toml  README.md
crates/codel00p-storage/src/: lib.rs  sqlite.rs
crates/codel00p-storage/tests/: in_memory_storage.rs  sqlite_storage.rs
(+538 files in other folders)
