[workspace]
members = [
    "crates/codel00p-providers",
    "crates/codel00p-harness",
    "crates/codel00p-protocol",
    "crates/codel00p-session",
    "crates/codel00p-storage",
    "crates/codel00p-memory",
    "crates/codel00p-mcp",
    "crates/codel00p-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/codel00p/codel00p"
