[package]
name = "codel00p-harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["macros", "rt"] }
