[package]
name = "codel00p-providers"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "codel00p_providers"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
codel00p-protocol = { path = "../codel00p-protocol" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
httpmock = "0.8"
