[package]
name = "codel00p-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[features]
sqlite = ["dep:rusqlite"]
