[package]
name = "codel00p-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "codel00p"
path = "src/main.rs"

[dependencies]
codel00p-memory = { path = "../codel00p-memory", features = ["sqlite"] }
codel00p-protocol = { path = "../codel00p-protocol" }
codel00p-storage = { path = "../codel00p-storage", features = ["sqlite"] }

[dev-dependencies]
tempfile = "3.23.0"
