[package]
name = "codel00p-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "codel00p"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.88"
codel00p-harness = { path = "../codel00p-harness" }
codel00p-mcp = { path = "../codel00p-mcp" }
codel00p-memory = { path = "../codel00p-memory", features = ["sqlite"] }
codel00p-plugin = { path = "../codel00p-plugin" }
codel00p-protocol = { path = "../codel00p-protocol" }
codel00p-providers = { path = "../codel00p-providers" }
codel00p-session = { path = "../codel00p-session" }
codel00p-skill = { path = "../codel00p-skill" }
codel00p-storage = { path = "../codel00p-storage", features = ["sqlite"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.19"
toml_edit = "0.22.22"
tokio = { version = "1.45.1", features = ["rt", "sync"] }

[dev-dependencies]
httpmock = "0.8.2"
tempfile = "3.23.0"
