[package]
name = "codel00p-cli"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "codel00p"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.88"
codel00p-cron = { path = "../codel00p-cron" }
codel00p-gateway = { path = "../codel00p-gateway" }
codel00p-harness = { path = "../codel00p-harness" }
codel00p-mcp = { path = "../codel00p-mcp" }
codel00p-memory = { path = "../codel00p-memory", features = ["sqlite"] }
codel00p-plugin = { path = "../codel00p-plugin" }
codel00p-protocol = { path = "../codel00p-protocol" }
codel00p-providers = { path = "../codel00p-providers" }
codel00p-session = { path = "../codel00p-session" }
codel00p-skill = { path = "../codel00p-skill" }
codel00p-storage = { path = "../codel00p-storage", features = ["sqlite"] }
hmac = "0.12"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10"
serde_json = "1.0.140"
base64 = "0.22.1"
toml = "0.8.19"
toml_edit = "0.22.22"
tokio = { version = "1.45.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
reqwest = { version = "0.12.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }

[dev-dependencies]
httpmock = "0.8.2"
tempfile = "3.23.0"
