[package]
name = "codel00p-cloud"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "codel00p-cloud"
path = "src/main.rs"

[lib]
name = "codel00p_cloud"
path = "src/lib.rs"

[features]
# Enables the Postgres storage backend; the service then honours DATABASE_URL.
postgres = ["codel00p-storage/postgres"]

[dependencies]
codel00p-protocol = { path = "../codel00p-protocol" }
codel00p-storage = { path = "../codel00p-storage" }

axum = "0.8.1"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "net", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures = "0.3.31"
tower = "0.5.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
base64 = "0.22.1"
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "net", "time"] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
futures = "0.3.31"
