[package]
name = "codel00p-e2e"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Black-box end-to-end test harness that drives the real codel00p binary against a scripted mock provider."
publish = false

[lib]
doctest = false

# The harness drives the real `codel00p` binary as a subprocess. A normal
# dependency on the binary-only `codel00p-cli` crate is ignored by Cargo (no lib
# target), so `codel00p_binary()` resolves the binary from the workspace target
# dir and builds it on demand if missing (CI builds it explicitly beforehand).
[dependencies]
codel00p-protocol = { path = "../codel00p-protocol" }
codel00p-memory = { path = "../codel00p-memory", features = ["sqlite"] }
codel00p-storage = { path = "../codel00p-storage", features = ["sqlite"] }
assert_cmd = "2"
httpmock = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
