[package]
name = "codel00p-harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.88"
codel00p-protocol = { path = "../codel00p-protocol" }
codel00p-providers = { path = "../codel00p-providers" }
codel00p-memory = { path = "../codel00p-memory" }
futures = "0.3.31"
reqwest = { version = "0.12.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[dev-dependencies]
httpmock = "0.8.2"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["macros", "rt", "time"] }
