[package]
name = "codel00p-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.88"
codel00p-harness = { path = "../codel00p-harness" }
codel00p-protocol = { path = "../codel00p-protocol" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["io-util", "process"] }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt"] }
